--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,16 @@ hr{
 
 /* Lists */
 
+.list-non-bullet{
+    list-style: none;
+}
+
+.list-inline{
+
+    display: inline;
+    padding: 0rem 0.5rem;
+}
+
 
 
 
