--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 
 body {
   font-family: "Montserrat", sans-serif;
+  margin: 0px;
 }
 
 hr{
@@ -117,4 +118,22 @@ hr{
 
 .ow{
     background-color: #cbd5e1 ;
+}
+
+/* Footer */
+
+footer{
+    background-color: var(--primary-color);
+    padding: 2rem 1rem;
+    text-align: center;
+    color: white;
+    border-top-right-radius: 1rem;
+}
+
+.footer .link{
+    color: white;
+}
+
+.footer ul{
+    padding-inline-start: 0px;
 }
