--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,10 @@ hr{
   text-decoration: none;
 }
 
+.link-active{
+    font-weight: bold;
+}
+
 /* Look into BEM naming convention */
 
 /* Lists */
